Metadata element lrmi_fi:id removed from the content